[package]
name = "heks"
description = """\
A lib/tool exchanges hexadecimal color input
"""
version = "0.0.2"
authors = ["Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>"]
edition = "2018"
homepage = "https://gitlab.com/grauwoelfchen/heks"
readme = "README.md"
keywords = []
categories = [
  "command-line-utilities",
]
documentation = "https://docs.rs/crate/heks"
repository = "https://gitlab.com/grauwoelfchen/heks"
license = "GPL-3.0-or-later"

exclude = [
  ".cargo-husky",
  ".cache",
  "Makefile",
  "rust-toolchain",
  ".env*",
  ".gitignore",
  ".clippy.toml",
  ".rustfmt.toml",
  ".gitlab-ci.yml",
]

[badges]
gitlab = { repository = "grauwoelfchen/heks", branch = "trunk" }

[dependencies]
nom = "^6.1"
rustyline = "8.0.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[profile.release]
panic = "abort"
